# splitset

./: .gitignore  CMakeLists.txt  main.c
